--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,9 @@ repositories {
 
 dependencies {
     //testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'com.velocitypowered:velocity-api:1.1.0-SNAPSHOT'
+    implementation 'com.velocitypowered:velocity-api:3.0.1'
     implementation "org.spongepowered:configurate-hocon:3.7.1"
-    annotationProcessor 'com.velocitypowered:velocity-api:1.1.0-SNAPSHOT'
+    annotationProcessor 'com.velocitypowered:velocity-api:3.0.1'
 
     //Jda
     implementation 'org.apache.commons:commons-collections4:4.4'
