--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     //testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'com.velocitypowered:velocity-api:3.0.1'
     implementation "org.spongepowered:configurate-hocon:3.7.1"
+    implementation 'net.luckperms:api:5.3'
     annotationProcessor 'com.velocitypowered:velocity-api:3.0.1'
 
     //Jda
